Refactored into smaller components + added leader system to lobby + added randomized names to players

--- a/protochess-client/src/App.css
+++ b/protochess-client/src/App.css
@@ -9,6 +9,9 @@ h1, h2, p, ul, li {
     font-family: sans-serif;
 }
 
+ul{
+    list-style-type: none;
+}
 ul.header li {
     display: inline;
     list-style-type: none;
